fix: increase max-file-size to resolve MaxUploadSizeExceededException, create GlobalExceptionHandler for file upload errors, and configure folder creation using unique complaint numbers